# dw-fx-ledger

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile.admin  Dockerfile.api  Dockerfile.web  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/alembic/: README  env.py
apps/api/alembic/versions/: 20260604_0001_initial_erd.py  20260605_0002_add_fx_lot_events.py  20260607_0003_add_item_trades.py  20260607_0004_item_codes_average_trade.py  20260607_0005_global_item_codes.py  20260607_0006_item_trade_cancel.py  20260611_0007_add_fx_currency_code.py  20260611_0008_add_common_codes_board_type.py  20260613_0009_add_board_comments.py
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: admin.py  auth.py  fx.py  item_trades.py  posts.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  auth.py  board.py  common.py  fx.py  item_trade.py
apps/api/app/schemas/: admin.py  auth.py  fx.py  item_trades.py  posts.py
apps/api/app/services/: admin.py  auth.py  cookies.py  fx.py  item_trades.py  posts.py  roles.py  security.py
apps/api/scripts/: create_admin.py  ensure_roles.py  grant_admin.py  import_jpy_completed_trades.py
apps/api/tests/: test_admin_api.py  test_auth_api.py  test_fx_api.py  test_item_trades_api.py  test_posts_api.py
docs/: docker-dev.md  fx-core-flow.md  gpt-context-summary.md  table-spec.csv  table-spec.md
scripts/: bootstrap-docker-host.sh  dev-start.sh  (+6 more)
(+64 files in other folders)
