[project]
name = "dw-fx-ledger-api"
version = "0.1.0"
description = "FastAPI service for DW FX Ledger"
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.1",
  "bcrypt==4.0.1",
  "cryptography>=48.0.0",
  "email-validator>=2.3.0",
  "fastapi>=0.115.12",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.9",
  "pydantic-settings>=2.9.1",
  "python-jose>=3.5.0",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
  "httpx2>=2.3.0",
  "pytest>=8.4.0",
  "ruff>=0.11.12",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
